welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: illegal start of simple pattern
while(!trouverSortie){
^Poucet:22: error: '=' expected but '}' found.
	}
        ^